# notes_about_animals

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  entrypoint.sh  pyproject.toml  pytest.ini
apps/blogs/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/images/: admin.py  models.py  services.py  urls.py  views.py
apps/users/: models.py  serializers.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
docker/deploy/: docker-compose.yaml
docker/local/: Dockerfile  docker-compose.yaml
tests/: conftest.py  factories.py  fixtures.py  test_blogs.py  test_users.py
